--- a/src/App/LoadingAnimations/LoadingAnimations.module.scss
+++ b/src/App/LoadingAnimations/LoadingAnimations.module.scss
@@ -5,8 +5,9 @@
 
   box-sizing: border-box;
   width: 100%;
-  height: 100%;
+  max-height: 100%;
 
+  @extend %scrollable;
   grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
   grid-gap: $spacing-default;
 }
